# UdonLibrary

./: .clang-format  .gitignore  .gitmodules  Acknowledgments_8md.html  AirCylinder_8hpp.html  AirCylinder_8hpp.js  AirCylinder_8hpp_source.html  AlwaysFalse_8hpp.html  AlwaysFalse_8hpp.js  AlwaysFalse_8hpp_source.html  ArduinoIDE_8md.html  ArrayView_8hpp.html  ArrayView_8hpp.js  ArrayView_8hpp_source.html  ArrayView_8md.html  Assert_8hpp.html  Assert_8hpp.js  Assert_8hpp_source.html  AsyncStreamReader_8hpp.html  AsyncStreamReader_8hpp.js  AsyncStreamReader_8hpp_source.html  BNO055_8hpp.html  BNO055_8hpp_source.html  BNO055_8md.html  BitPack_8hpp.html  BitPack_8hpp.js  BitPack_8hpp_source.html  Bit_8hpp.html  Bit_8hpp.js  Bit_8hpp_source.html  BrushLess_8hpp.html  BrushLess_8hpp.js  BrushLess_8hpp_source.html  CAN_8md.html  CI_8md.html  CLion_8md.html  CRC_8hpp.html  CRC_8hpp.js  CRC_8hpp_source.html  CRC_8md.html  (+1036 more)
.github/: dependabot.yml  workflowsarduino-cli.yml
.github/workflows/: ArduinoCI.yml  ArduinoLint.yml  DoxygenPage.yml  GoogleTest.yml  UnitTest.yml  actionlint.yml  arduino-cli.yml  convert-tabs-to-spaces.yml
Callbacker/: Callbacker.ino
Callbacker/callbacker/: callbacker.sln
Docs/Algorithm/: Delegator.md
FunctionBinder/: README.md
FunctionBinder/FunctionBinder/: FunctionBinder.cpp  FunctionBinder.sln  FunctionBinder.vcxproj  FunctionBinder.vcxproj.filters
FunctionBinder/arduino/: FunctionBinder.h  arduino.ino
Gyro/: Gyro.h  Gyro.ino  README.md
Measure/: Gyro.h  Measure.h  Measure.ino  README.md
Src/: Udon.hpp
algorithm/Scheduler/: Scheduler.sln
com/can/: README.md  sync.ps1
com/common/: BasicReader.hpp  Common.ino  Message.hpp
com/forwarding/: forwarding.ino
com/stdmessage/: Message.hpp
dev/common/: Float.hpp  udon.hpp
dev/stl/: stl.ino
docs/: Delegator.md  README.md  Test.md
docs/Algorithm/: Container.md  Delegator.md  FeedbackController.md  Interrupt.md  LoopCycleController.md  MovingAverage.md  SteerOptimizer.md
docs/Com/: シリアライズ.md  通信.md
docs/Communication/: CAN.md  CRC.md  Common.md  I2C.md  IM920.md  LoRa.md  Lora.md  Message.md  Pad.md  PadOrganization.md  Serial.md  Serialization.md  UART.md  通信.md
docs/Developer/: Acknowledgments.md  CI.md  Change.md  DevelopSetup.md  DirectoryStructure.md  DoxygenPage.md  Idea.md  README.md  StyleGuide.md  Troubleshooting.md
docs/DoxygenConfig/: footer.html  header.html
docs/Driver/: BNO055.md  DipSwitch.md  Encoder.md  EncoderPico.md  Motor.md  PIO.md  PicoServo.md  PicoWDT.md  RoboMasterMotor.md  SegmentsLed.md
docs/Install/: ArduinoIDE.md  CLion.md  PIO.md  PlatformIO.md  RaspberryPiPico.md  RequiredTools.md  Teensy.md  VanillaCpp.md  VisualStudio.md  VisualStudioSubmodule.md  git.md
docs/Other/: Acknowledgments.md  Functions.md  PIO.md  Serialization.md  Traits.md  Utility.md
docs/com/: 通信.md  (+1 more)
gyro_remake/: Gyro.h  gyro_remake.ino
html/: ArrayView_8hpp_source.html  AsyncStreamReader_8hpp_source.html  CanUtility_8hpp_source.html  Com_2Message_2Servo_8hpp_source.html  DeltaTime_8hpp_source.html  Deserializer_8hpp_source.html  E220Base_8hpp_source.html  I2cMasterWriter_8hpp_source.html  I2cSlaveReader_8hpp_source.html  ICanBus_8hpp_source.html  Im920Normal_8hpp_source.html  Impl_2Serializer_8hpp_source.html  LoopCycleController_8hpp_source.html  Message_8hpp_source.html  Pad_8hpp_source.html  Parameter_8hpp_source.html  Polar_8hpp_source.html  Position_8hpp_source.html  RingBuffer_8hpp_source.html  ServoSpeed_8hpp_source.html  StaticVector_8hpp_source.html  SteerOptimizer_8hpp_source.html  Uart_8hpp_source.html  Udon_8hpp_source.html  Vector2D_8hpp_source.html  Vector3D_8hpp_source.html  classUdon_1_1ArrayView.js  classUdon_1_1AsyncStreamReader.js  classUdon_1_1CanReader.js  classUdon_1_1CanWriter.html  classUdon_1_1DeltaTime.js  classUdon_1_1IIm920-members.html  classUdon_1_1IIm920.html  classUdon_1_1IIm920.js  classUdon_1_1Im920.js  classUdon_1_1Impl_1_1Serializer-members.html  classUdon_1_1Impl_1_1Serializer.html  classUdon_1_1MotorBy.js  classUdon_1_1PadPS5.html  classUdon_1_1PadPS5BT.html  (+83 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.html  all_21.js  all_22.js  all_23.html  all_23.js  all_24.js  all_25.js  all_26.js  all_27.html  all_27.js  all_28.html  all_28.js  all_29.html  all_29.js  all_2a.html  all_2a.js  all_2b.js  all_2c.html  all_2c.js  all_2d.html  (+287 more)
src/: BasicReader.hpp  BasicWriter.hpp  CANBusSPI.hpp  CANBusTeensy.hpp  CANReader.hpp  CANWriter.hpp  CanBase.hpp  CanBus.hpp  CanBusSPI.hpp  CanBusSpi.hpp  CanBusTeensy.hpp  CanCommon.hpp  CanInfo.hpp  CanReader.h  CanReader.hpp  CanWriter.hpp  Float.hpp  FunctionBinder.hpp  Gyro.hpp  I2cSlaveWriter.hpp  Measure.hpp  Message.hpp  Motor.h  Motor.hpp  Predef.hpp  Serializer.hpp  Udon.hpp  UdonFwd.hpp  Utility.hpp  Vector2D.hpp  functional.hpp  list.hpp  memory.hpp  utility.hpp
stl/: functional.hpp  list.hpp  memory.hpp  stl.ino
test/: test.ino
test/UnitTest/: CMakeLists.txt  ttest.sh
test/UnitTest/Common/: CMakeLists.txt  Include.cpp
test/UnitTest/Serialization/: CMakeLists.txt  Serialization.cpp
test/UnitTest/Types/: CMakeLists.txt  Optional.cpp  StringView.cpp  Vector2D.cpp
(+861 files in other folders)
